@@ -34,6 +34,10 @@ SVN trunk:
  * campaign server
    * Support new "timestamp" attribute
    * Save persistent attributes in the campaign data
+   * Support filtering on campaign_list requests
+     * filter by name
+     * filter by last update time (before or after)
+   * campaign_list response now contains the time the request was processed
  * utils: added weblist.pl and webtgz.pl web interface programs
 
 Version 1.0rc1:
